<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".activities.fragments.JobsAddingFragment">

    <EditText
        android:id="@+id/job_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:hint="@string/job_title_caption"
        android:maxLength="800"/>

    <EditText
        android:id="@+id/job_description"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fontFamily="@font/roboto_medium"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginVertical="20dp"
        android:hint="@string/job_description_caption"/>

    <EditText
        android:id="@+id/job_salary"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:fontFamily="@font/roboto_medium"
        android:textSize="24sp"
        android:hint="@string/job_salary_caption"
        android:inputType="numberDecimal" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_button_caption"
        android:backgroundTint="@color/green"
        android:layout_marginVertical="20dp"
        app:cornerRadius="20dp"/>

</LinearLayout>