<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.fragments.InitActivityMainFragment">

    <TextView
        android:id="@+id/app_logo_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="154dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/app_logo"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="italic" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/login_button_caption"
        android:backgroundTint="@color/green"
        android:textSize="40sp"
        app:cornerRadius="20dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/register_button"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/register_button_caption"
        android:backgroundTint="@color/green"
        android:textSize="40sp"
        app:cornerRadius="20dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"/>

</RelativeLayout>