<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    android:orientation="vertical"
    android:layout_centerInParent="true"
    android:gravity="center_horizontal"
    tools:context=".activities.fragments.InitActivityLoginFragment">

    <TextView
        android:id="@+id/login_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/login_caption"
        android:layout_marginVertical="20dp"/>

    <EditText
        android:id="@+id/login_field"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/password_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/password_caption"
        android:layout_marginVertical="20dp"/>

    <EditText
        android:id="@+id/password_field"
        android:layout_width="200dp"
        android:inputType="textPassword"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:backgroundTint="@color/green"
        android:text="@string/login_button_caption"
        android:layout_marginVertical="20dp"/>

</LinearLayout>